--- a/templates/Papi4.html
+++ b/templates/Papi4.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html><body>
+    <head>
+        <title>papi4</title>
+    </head>
+    <form method="post">
+            <input type="submit" name="action" value="eng-lang">
+            <input type="submit" name="action" value="rus-lang">
+    </form>
+    <h2>{{ papanya }}</h2>
+    <img src="{{ url_for('static', path='/papi4.jpg') }}" style="width:100%;margin-bottom:-6px">
+    <h3>{{ about_papi4 }}</h3></body>
 </html>
