--- a/templates/index2.html
+++ b/templates/index2.html
@@ -18,19 +18,24 @@
             <img src=https://leonardo.osnova.io/0234f89e-1208-5cbd-b08d-72422d547926/-/preview/600/-/format/webp/
                 width="500"
                 height="500">
-            <h2>{{ ryan_gosling }}</h2>
+            <a href="http://127.0.0.1:8000/Gosling/">
+                <h2>{{ ryan_gosling }}</h2></a>
             <img src=https://sun9-85.userapi.com/impg/Ue1o-OJb0W0-lh5HCkGniYLjCVP075BaO2bjSw/dIcLirD8vjI.jpg?size=900x1080&quality=96&sign=640a461fde03373eb7db939aa508dfbd&type=album
                 width="900"
                 height="1080">
-            <h2>{{ cat }}</h2>
+            <a href="http://127.0.0.1:8000/Cat/">
+                <h2>{{ cat }}</h2></a>
             <img src=https://i.pinimg.com/originals/98/9a/37/989a371c2cd649f258e393500d854984.gif
                 width="500"
                 height="500">
-            <h2>{{ filth }}</h2>
+            <a href="http://127.0.0.1:8000/Filth/">
+                <h2>{{ filth }}</h2></a>
             <img src=https://sun9-46.userapi.com/impg/T6j_SPrEyfgQkPQGiPqBmq6zjSB45F4v3yitAg/skH2DMJpyms.jpg?size=1280x1067&quality=96&sign=a607d11d67daf6f261247c245029534c&type=album
                 width="1000"
                 height="867">
-            <h2>{{ papanya }}</h2>
+            <a href="http://127.0.0.1:8000/Papi4/">
+                <h2>{{ papanya }}</h2></a>
             <img src="{{ url_for('static', path='/papi4.jpg') }}" style="width:100%;margin-bottom:-6px">
+            <h1>{{ about_papi4 }}</h1>
         </body>
 </html>
